[gd_scene load_steps=4 format=3 uid="uid://b64jjbsqqoo22"]

[ext_resource type="Theme" uid="uid://m30a0nncwbm0" path="res://assets/styles/options_menu.tres" id="1_2vmo8"]
[ext_resource type="Script" uid="uid://c5hk6wof00gq1" path="res://scripts/ui/options_menu/sound_test.gd" id="2_26083"]
[ext_resource type="WwiseEvent" uid="uid://b15pfcpwpul2n" path="res://Wwise/resources/Event/{8F2C20DE-883A-4CCF-8802-3C533F14AEEB}.tres" id="3_e3nkq"]

[node name="SoundTest" type="VBoxContainer"]
offset_right = 384.0
offset_bottom = 152.0
size_flags_horizontal = 6
theme = ExtResource("1_2vmo8")
theme_override_constants/separation = 8
script = ExtResource("2_26083")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "SOUND TEST"
horizontal_alignment = 1

[node name="MusContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 6

[node name="MusLabel" type="Label" parent="MusContainer"]
layout_mode = 2
text = "MUSIC"

[node name="MusDropdown" type="OptionButton" parent="MusContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusPlayButton" type="Button" parent="MusContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "PLAY"

[node name="MusStopButton" type="Button" parent="MusContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "STOP"

[node name="SFXContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 6

[node name="SFXLabel" type="Label" parent="SFXContainer"]
layout_mode = 2
text = "SFX  "

[node name="SFXDropdown" type="OptionButton" parent="SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFXPlayButton" type="Button" parent="SFXContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "PLAY"

[node name="MusPlayer" type="AkEvent2D" parent="."]

[node name="SFXPlayer" type="AkEvent2D" parent="."]
event = ExtResource("3_e3nkq")

[connection signal="item_selected" from="MusContainer/MusDropdown" to="." method="_on_mus_dropdown_item_selected"]
[connection signal="pressed" from="MusContainer/MusPlayButton" to="." method="_on_mus_play_button_pressed"]
[connection signal="pressed" from="MusContainer/MusStopButton" to="." method="_on_mus_stop_button_pressed"]
[connection signal="item_selected" from="SFXContainer/SFXDropdown" to="." method="_on_sfx_dropdown_item_selected"]
[connection signal="pressed" from="SFXContainer/SFXPlayButton" to="." method="_on_sfx_play_button_pressed"]
